--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,21 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
+#Auto-gend folder
+.idea/
+node_modules/
+tmp/
+deploy/
+dist/
+
+#crap
+*.log
+*.map
+*.css
+*.iml
+.ftppass
+lib/3rd/zepto.min.js
+
 # Windows Installer files
 *.cab
 *.msi
@@ -26,7 +41,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
